# bazel_sysroot_c_hello_world

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  bazel_sysroot_llvm_amd64_file_list  calculate_sysroot_hashes.sh  default.nix  diagnostic_plan.md  hello.cc  new_plan.md  sysroot.BUILD.bazel.in  toolchain.bzl  toolchain_config.bzl  toolchains_llvm_plan.md
