#
# MODULE.bazel
#

module(
    name = "bazel_sysroot_c_hello_world",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

# https://github.com/bazel-contrib/toolchains_llvm/releases/tag/v1.3.0
# please leave this path as it is.  it is correct
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

# Commenting out the section attempting to use https://github.com/MaterializeInc/toolchains
# This toolchain uses shared libraries at runtime
# llvm.toolchain(
#     llvm_version = "18.1.8",
#     sha256 = {
#         "darwin-aarch64": "d28437d58615ccae434c289bcf5e0d10f031c732d7b60a5090541dbbbd381a01",
#         "darwin-x86_64": "f0c103bc2a19ffee7b55df2798188f085756e5668adc7c18d05c7f6705871828",
#         "linux-aarch64": "e9695cb9a8d068236b1c902af877be396eb0110d87525db49c68911b571f6976",
#         "linux-x86_64": "4d0bbec4acd23006d1353d0cd255144df8c910981f5474f3030bfde3dc75ccfa",
#     },
#     stdlib = {
#         "linux-x86_64": "stdc++",
#         "linux-aarch64": "stdc++",
#     },
#     urls = {
#         "darwin-aarch64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/darwin_aarch64.tar.zst"],
#         "darwin-x86_64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/darwin_x86_64.tar.zst"],
#         "linux-aarch64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/linux_aarch64.tar.zst"],
#         "linux-x86_64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/linux_x86_64.tar.zst"],
#     },
# )
# llvm.toolchain(
#     llvm_version = "18.1.8",
#     sha256 = {
#         "darwin-aarch64": "d28437d58615ccae434c289bcf5e0d10f031c732d7b60a5090541dbbbd381a01",
#         "darwin-x86_64": "f0c103bc2a19ffee7b55df2798188f085756e5668adc7c18d05c7f6705871828",
#         "linux-aarch64": "e9695cb9a8d068236b1c902af877be396eb0110d87525db49c68911b571f6976",
#         "linux-x86_64": "4d0bbec4acd23006d1353d0cd255144df8c910981f5474f3030bfde3dc75ccfa",
#     },
#     stdlib = {
#         "linux-x86_64": "stdc++",
#         "linux-aarch64": "stdc++",
#     },
#     urls = {
#         "darwin-aarch64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/darwin_aarch64.tar.zst"],
#         "darwin-x86_64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/darwin_x86_64.tar.zst"],
#         "linux-aarch64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/linux_aarch64.tar.zst"],
#         "linux-x86_64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-5/linux_x86_64.tar.zst"],
#     },
# )

# Attempting to use: https://github.com/dzbarsky/static-clang
llvm.toolchain(
    llvm_version = "20.1.1",
    sha256 = {
        "darwin-aarch64": "a4e65db49d01e4b37abcbc36a03e4f1121fbea63a7c7b58f9d49e3848a4cbdfc",
        "darwin-x86_64": "b681a621e6d456e20fdfc7626db23edad63f7dabb1442790db3397431688cb41",
        "linux-aarch64": "a71d6686edfb32e455717a1befb013b580a52042915a49f21fc25f83fff59e20",
        "linux-x86_64": "2096e63a41887a860199aec0f046f82e6469b2cd5ae4e4245a7a111bff4abe5b",
    },
    stdlib = {
        "linux-x86_64": "stdc++",
        "linux-aarch64": "stdc++",
    },
    urls = {
        "darwin-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/darwin_arm64.tar.zst"],
        "darwin-x86_64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/darwin_amd64.tar.zst"],
        "linux-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/linux_arm64.tar.zst"],
        "linux-x86_64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/linux_amd64.tar.zst"],
    },
)

# curl -sSL http://example.com/file | sha256sum
# curl -sSL https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/darwin_arm64.tar.zst | sha256sum
# curl -sSL https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/darwin_amd64.tar.zst | sha256sum
# curl -sSL https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/linux_arm64.tar.zst | sha256sum
# curl -sSL https://github.com/dzbarsky/static-clang/releases/download/v20.1.1-4/linux_amd64.tar.zst | sha256sum

# Configure the sysroot for the LLVM toolchain
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@bazel_sysroot_library//:sysroot",
    targets = ["linux-x86_64"],
)

# Make the toolchain repository visible
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_sysroot_library",
    urls = ["https://github.com/randomizedcoder/bazel_sysroot_library/archive/refs/heads/main.tar.gz"],
    sha256 = "e0a1d57e5d37a714ed3ac40fe02fb69d95266d4e37041e37901d8ea33302ad51",
    strip_prefix = "bazel_sysroot_library-main/sysroot",
)

# end